--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Code visualizer for web",
   "main": "index.js",
   "scripts": {
+    "start": "grunt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,8 +21,9 @@
     "url": "https://github.com/ilian6806/CodeView/issues"
   },
   "homepage": "https://github.com/ilian6806/CodeView#readme",
-  "dependencies": {
+  "devDependencies": {
     "grunt": "1.0.1",
-    "grunt-contrib-uglify": "2.3.0"
+    "grunt-contrib-uglify": "2.3.0",
+    "grunt-contrib-copy": "1.0.0"
   }
 }
