--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "homepage": "https://github.com/ilian6806/CodeView#readme",
   "devDependencies": {
     "grunt": "1.0.1",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-sass": "1.0.0",
     "grunt-contrib-uglify": "2.3.0",
-    "grunt-contrib-copy": "1.0.0"
+    "grunt-contrib-watch": "1.0.0"
   }
 }
