--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-sass": "1.0.0",
     "grunt-contrib-uglify": "2.3.0",
-    "grunt-contrib-watch": "1.0.0"
+    "grunt-contrib-watch": "1.0.0",
+    "grunt-run": "0.7.0"
   }
 }
